Improve consumer groups loading